force-app/main/default/objects/supplier__c/supplier__c.object-meta.xml
<CustomObject>
    <description>this will maintain the data of all the suppliers</description>
    <label>supplier</label>
    <nameField>
        <label>supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>