force-app/main/default/objects/supplier__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>this field will store the address of the supplier</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>