force-app/main/default/objects/supplier__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field will store contact of the supplier</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>supliers</relationshipLabel>
    <relationshipName>supliers</relationshipName>
    <type>Lookup</type>
</CustomField>