force-app/main/default/objects/supplier__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>this feild will store the contact number of the supplier</description>
    <label>Phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>